--- a/package.json
+++ b/package.json
@@ -6,12 +6,37 @@
         "build": "vite build",
         "dev": "vite"
     },
+    "dependencies": {
+        "@hookform/resolvers": "^3.3.4",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tooltip": "^1.2.8",
+        "@tanstack/react-query": "^5.28.0",
+        "clsx": "^2.1.0",
+        "date-fns": "^4.1.0",
+        "lucide-react": "^0.344.0",
+        "react": "^18.2.0",
+        "react-day-picker": "^9.11.2",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.51.0",
+        "react-router-dom": "^7.9.6",
+        "tailwind-merge": "^2.2.1",
+        "zod": "^3.22.4",
+        "zustand": "^4.5.2"
+    },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@types/react": "^18.2.64",
+        "@types/react-dom": "^18.2.21",
+        "@vitejs/plugin-react": "^4.2.1",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
+        "typescript": "^5.4.2",
         "vite": "^7.0.7"
     }
 }
