--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@tanstack/react-query": "^5.28.0",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.0",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.344.0",
@@ -24,7 +26,9 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.0",
         "react-router-dom": "^7.9.6",
+        "recharts": "^3.5.1",
         "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4",
         "zustand": "^4.5.2"
     },
