--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
         "@radix-ui/react-label": "^2.1.8",
         "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-progress": "^1.1.8",
+        "@radix-ui/react-radio-group": "^1.3.8",
         "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-switch": "^1.2.6",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@tanstack/react-query": "^5.28.0",
         "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.0",
+        "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.344.0",
@@ -31,7 +33,7 @@
         "react-hook-form": "^7.51.0",
         "react-router-dom": "^7.9.6",
         "recharts": "^3.5.1",
-        "tailwind-merge": "^2.2.1",
+        "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4",
         "zustand": "^4.5.2"
@@ -45,6 +47,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
+        "tw-animate-css": "^1.4.0",
         "typescript": "^5.4.2",
         "vite": "^7.0.7"
     }
