--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-switch": "^1.2.6",
+        "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@tanstack/react-query": "^5.28.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
+        "install": "^0.13.0",
         "lucide-react": "^0.344.0",
+        "npm": "^11.7.0",
         "react": "^18.2.0",
         "react-day-picker": "^9.11.3",
         "react-dom": "^18.2.0",
